date picked fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,3 +50,7 @@
     -moz-osx-font-smoothing: grayscale;
   }
 }
+
+.rdp-root {
+  --rdp-accent-color: white !important; /* Change the accent color to indigo. */
+}
